fix: resolve SonarQube code smells across main and test sources